k8s/room2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tuanoi-room2-client
  namespace: tuanoi-room2
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: tuanoi-room2-client
